--- a/src/components/codyMyFilter/codyMyFilter.module.css
+++ b/src/components/codyMyFilter/codyMyFilter.module.css
@@ -38,4 +38,21 @@
 .option{
   font-size: 18px;
   cursor: pointer;
+  transition: all ease 300ms;
+}
+.Hidefilter{
+  transition: all 300ms;
+  overflow: hidden;
+}
+.showFilterBox{
+  visibility: visible;  
+  height: 130px;
+}
+.hideFilterBox{
+  visibility: hidden;
+  height: 0px;
+
+}
+.turn{
+  transform: rotate(180deg);
 }
