--- a/src/style/base/_color.scss
+++ b/src/style/base/_color.scss
@@ -5,6 +5,7 @@ $mainLight2: #e6eef5;
 $white: white;
 $black: black;
 $red:#FF0000;
+$green: #8dbd77;
 $gray:#626262;
 $lightGray:#e8e7e6;
 $shadow: rgba(217, 217, 217, 1);
