--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,17 +1,29 @@
 .footer{
     width: 100%;
-    height: 140px;
-    margin-top: 30px;
-    background-color: $main;
+    background-color: rgb(48, 48, 48);
+    margin-top: 20px;
+    h5{
+        margin: 0;
+    }
+    .githubIcon{
+        margin-left: 10px;
+        cursor: pointer;
+    }
+    .githubIcon:hover{
+        color: $mainLight1;
+    }
+    .blue{
+        color: $mainLight1;
+    }
     .discription{
+        text-align: start;
         width: 70%;
         max-width: $maxWidth;
         margin: auto;
         padding: 30px 20px;
         color: $white;
         font-size: $fontMicro;
-        max-width: $maxWidth;
-        @media (max-width: 767px) {
+        @media (max-width: $mediaWidth) {
             width: 100%;
         }
     }
