--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,17 +1,18 @@
-$maxWidth: 900px;
+$maxWidth: 600px;
+$mediaWidth: 700px;
 $minWidth: 300px;
 /**
  * Base
  */
  html {
     @media (min-width: 768px) {
-      font-size: 15px;
+      // font-size: 15px;
     }
     @media (min-width: 1200px) {
-      font-size: 16px;
+      // font-size: 16px;
     }
     @media (max-width: 767px) {
-      font-size: 14px;
+      // font-size: 14px;
     }
   }
   
