--- a/src/style/components/_codyMy.scss
+++ b/src/style/components/_codyMy.scss
@@ -1,6 +1,9 @@
 .codyMy{
   width: 100%;
-  padding: 1.5em 0; 
+  padding: 1.5em 0;
+  padding-bottom: 3em;
+  max-width: $maxWidth;
+  margin: auto;
   .title{
     text-align: center;
     padding: 0.8em 0px;
@@ -11,12 +14,28 @@
     margin: auto;
     padding-bottom: 90%;
     box-shadow: 0px 0px 6px 0px $shadow;
+    @media (min-width: $mediaWidth) {
+      width: 70%;
+      padding-bottom: 80%;
+    }
     .codyImg {
       position: absolute;
       width: 100%;
       height: 100%;
       transform: translate(-50%,0);
       object-fit: cover;
+    }
+    .heart{
+      position: absolute;
+      right: 15px;
+      top: 10px;
+      font-size: $fontMedium;
+      color: gray;
+      z-index: 1;
+      cursor: pointer;
+    }
+    .heartActive{
+      color: $red;
     }
   }
       
