--- a/src/style/components/_likeFilter.scss
+++ b/src/style/components/_likeFilter.scss
@@ -17,6 +17,7 @@
     border-radius: 20px;
     cursor: pointer;
     border: 1px solid $mainLight1;
+    font-size: $fontMicro;
   }
   .clotheItem:hover, .styleItem:hover, .active{
     box-sizing: border-box;
