--- a/src/style/layout/_navbar.scss
+++ b/src/style/layout/_navbar.scss
@@ -3,16 +3,20 @@
   height: 2em;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 99;
   background-color: $main;
   .nav{
     width: 70%;
     height: 2em;
+    max-width: $maxWidth;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: auto;
     color: $white;
+    @media (max-width: $mediaWidth) {
+      width: 90%;
+    }
     cursor: pointer;
     .logo{
         font-size: 0.9em;
