--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,22 +1,6 @@
 /**
  * Base
  */
-@media (min-width: 768px) {
-  html {
-    font-size: 15px;
-  }
-}
-@media (min-width: 1200px) {
-  html {
-    font-size: 16px;
-  }
-}
-@media (max-width: 767px) {
-  html {
-    font-size: 14px;
-  }
-}
-
 body {
   font-family: "SDSamliphopangche_Outline";
   padding: 0;
@@ -318,38 +302,12 @@ textarea {
 }
 /* Font size */
 /* Font weight */
-.carouselContainer {
-  position: relative;
-  margin: 0 auto;
-  padding: 0.5em 0.5em;
-  width: 70%;
-  min-width: 40em;
-  background-color: white;
-}
-.carouselContainer .codyBox {
-  margin: 1em;
-  box-shadow: 0px 0px 6px 0px rgb(217, 217, 217);
-}
-.carouselContainer .codyBox .imgBox {
-  position: relative;
-  width: 95%;
-  padding-bottom: 100%;
-  overflow: hidden;
-}
-.carouselContainer .codyBox .imgBox .codyImg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.carouselContainer .codyBox .codyType {
-  font-size: 0.8em;
-}
-
 .codyMy {
   width: 100%;
   padding: 1.5em 0;
+  padding-bottom: 3em;
+  max-width: 600px;
+  margin: auto;
 }
 .codyMy .title {
   text-align: center;
@@ -362,6 +320,12 @@ textarea {
   padding-bottom: 90%;
   box-shadow: 0px 0px 6px 0px rgb(217, 217, 217);
 }
+@media (min-width: 700px) {
+  .codyMy .codyBox {
+    width: 70%;
+    padding-bottom: 80%;
+  }
+}
 .codyMy .codyBox .codyImg {
   position: absolute;
   width: 100%;
@@ -369,6 +333,18 @@ textarea {
   transform: translate(-50%, 0);
   -o-object-fit: cover;
      object-fit: cover;
+}
+.codyMy .codyBox .heart {
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  font-size: 20px;
+  color: gray;
+  z-index: 1;
+  cursor: pointer;
+}
+.codyMy .codyBox .heartActive {
+  color: #FF0000;
 }
 .codyMy .btnBox {
   width: 90%;
@@ -389,6 +365,7 @@ textarea {
 }
 
 .filterContainer {
+  position: relative;
   width: 100%;
   margin: auto;
   padding: 10px;
@@ -413,6 +390,11 @@ textarea {
   border-radius: 20px;
   cursor: pointer;
   border: 1px solid #69a0d3;
+  font-size: 14px;
+}
+.filterContainer .select {
+  border: 1px solid #8dbd77;
+  border-radius: 4px;
 }
 .filterContainer .active {
   cursor: default;
@@ -434,7 +416,7 @@ textarea {
 }
 .filterContainer .showFilterBox {
   visibility: visible;
-  height: 130px;
+  height: 120px;
 }
 .filterContainer .hideFilterBox {
   visibility: hidden;
@@ -442,6 +424,21 @@ textarea {
 }
 .filterContainer .turn {
   transform: rotate(180deg);
+}
+.filterContainer .saveBtn {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  background-color: #69a0d3;
+  color: white;
+  width: 50px;
+  height: 30px;
+  font-weight: 700;
+  font-size: 14px;
+  border-radius: 20px;
+}
+.filterContainer .hideSaveBtn {
+  opacity: 0;
 }
 
 .likeFilterContainer {
@@ -464,6 +461,7 @@ textarea {
   border-radius: 20px;
   cursor: pointer;
   border: 1px solid #69a0d3;
+  font-size: 14px;
 }
 .likeFilterContainer .clotheItem:hover, .likeFilterContainer .styleItem:hover, .likeFilterContainer .active {
   box-sizing: border-box;
@@ -485,6 +483,7 @@ textarea {
 .weather .weatherContainer {
   margin: auto;
   color: white;
+  max-width: 600px;
   text-align: start;
 }
 .weather .weatherContainer .todayTxt {
@@ -530,20 +529,32 @@ textarea {
 
 .footer {
   width: 100%;
-  height: 140px;
-  margin-top: 30px;
-  background-color: #175A97;
+  background-color: rgb(48, 48, 48);
+  margin-top: 20px;
+}
+.footer h5 {
+  margin: 0;
+}
+.footer .githubIcon {
+  margin-left: 10px;
+  cursor: pointer;
+}
+.footer .githubIcon:hover {
+  color: #69a0d3;
+}
+.footer .blue {
+  color: #69a0d3;
 }
 .footer .discription {
+  text-align: start;
   width: 70%;
-  max-width: 900px;
+  max-width: 600px;
   margin: auto;
   padding: 30px 20px;
   color: white;
   font-size: 14px;
-  max-width: 900px;
 }
-@media (max-width: 767px) {
+@media (max-width: 700px) {
   .footer .discription {
     width: 100%;
   }
@@ -554,18 +565,24 @@ textarea {
   height: 2em;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 99;
   background-color: #175A97;
 }
 .navContainer .nav {
   width: 70%;
   height: 2em;
+  max-width: 600px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: auto;
   color: white;
   cursor: pointer;
+}
+@media (max-width: 700px) {
+  .navContainer .nav {
+    width: 90%;
+  }
 }
 .navContainer .nav .logo {
   font-size: 0.9em;
@@ -582,25 +599,35 @@ textarea {
   box-shadow: 0px 0px 6px 0px rgb(217, 217, 217);
 }
 
-.container {
+.recoContainer {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.container .btnContainer {
+.recoContainer .btnContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 70%;
-  min-width: 40em;
+  max-width: 600px;
   height: 3em;
   padding-bottom: 5px;
   background-color: makerWhite;
 }
-.container .content_container {
+@media (max-width: 700px) {
+  .recoContainer .btnContainer {
+    width: 95%;
+  }
+}
+.recoContainer .content_container {
   position: relative;
   width: 70%;
+}
+@media (max-width: 700px) {
+  .recoContainer .content_container {
+    width: 95%;
+  }
 }
 
 .like {
@@ -609,6 +636,12 @@ textarea {
   flex-direction: column;
   justify-content: center;
   margin: auto;
+  max-width: 600px;
+}
+@media (max-width: 700px) {
+  .like {
+    width: 95%;
+  }
 }
 .like .title {
   text-align: center;
@@ -641,7 +674,9 @@ textarea {
 .myPage {
   width: 100%;
   height: 100vh;
+  max-width: 600px;
   flex: 1;
+  margin: auto;
 }
 .myPage .title {
   text-align: center;
@@ -661,6 +696,11 @@ textarea {
   border-radius: 4px;
   border: solid 1px #e8e7e6;
   text-align: start;
+}
+@media (max-width: 700px) {
+  .myPage .optContainer {
+    width: 100%;
+  }
 }
 .myPage .optContainer .optBox {
   padding: 10px 20px;
@@ -809,11 +849,17 @@ textarea {
   display: flex;
   flex-direction: column;
   width: 70%;
+  max-width: 600px;
   padding: 10px 20px;
   margin: 50px 0 30px 0;
   background-color: white;
   border-radius: 20px;
   box-shadow: 0px 0px 6px 0px rgb(217, 217, 217);
+}
+@media (max-width: 700px) {
+  .backContainer .signUpContainer {
+    width: 100%;
+  }
 }
 .backContainer .signUpContainer .title {
   margin: 20px;
@@ -828,6 +874,18 @@ textarea {
 .backContainer .signUpContainer .signUpBox .subTitle {
   font-weight: 700;
   font-size: 18px;
+}
+.backContainer .signUpContainer .signUpBox .idCheckBtn {
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  background: #175A97;
+  color: white;
+  font-size: 14px;
+}
+.backContainer .signUpContainer .signUpBox .idCheck {
+  background-color: rgb(192, 192, 192);
+  cursor: default;
 }
 .backContainer .signUpContainer .signUpBox .input, .backContainer .signUpContainer .signUpBox .select, .backContainer .signUpContainer .signUpBox .radio {
   padding: 2px;
@@ -861,6 +919,34 @@ textarea {
   color: #FF0000;
 }
 
+.carouselContainer {
+  position: relative;
+  margin: 0 auto;
+  padding: 0.5em 0.5em;
+  width: 100%;
+  max-width: 600px;
+  background-color: white;
+}
+.carouselContainer .title {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.carouselContainer .codyBox .imgBox {
+  box-shadow: 0px 0px 6px 0px rgb(217, 217, 217);
+  position: relative;
+  width: 95%;
+  padding-bottom: 100%;
+  margin: auto;
+  overflow: hidden;
+}
+.carouselContainer .codyBox .imgBox .codyImg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .cateBtn {
   display: block;
   position: relative;
@@ -874,7 +960,7 @@ textarea {
   color: black;
   background: white;
   transition: all 0.15s;
-  box-shadow: 0px 2px 0px 0px #175A97;
+  box-shadow: 0px 4px 0px -2px #175A97;
 }
 
 .cateBtn:hover {
