--- a/src/style/pages/_myPage.scss
+++ b/src/style/pages/_myPage.scss
@@ -1,7 +1,9 @@
 .myPage{
   width: 100%;
   height: 100vh;
+  max-width: $maxWidth;
   flex: 1;
+  margin: auto;
   // overflow-y: scroll;
   .title{
     text-align: center;
@@ -22,6 +24,9 @@
     border-radius: 4px;
     border: solid 1px $lightGray; 
     text-align: start;
+    @media (max-width: $mediaWidth) {
+      width: 100%;
+    }
     .optBox{
       padding: 10px 20px;
     }
