--- a/src/style/pages/_signUp.scss
+++ b/src/style/pages/_signUp.scss
@@ -73,11 +73,12 @@
       font-size: $fontMicro;  
       color: $white;
       text-align: start;
+      display: none;
     }
     .active{
+      display:block;
       color: $red;
     }
   }
 }
-
 
