--- a/src/style/components/_codyMy.scss
+++ b/src/style/components/_codyMy.scss
@@ -8,6 +8,7 @@
     text-align: center;
     padding: 0.8em 0px;
   }
+
   .codyBox{
     position: relative;
     width: 80%;
@@ -37,6 +38,9 @@
     .heartActive{
       color: $red;
     }
+  }
+  .codyBoxLoading{
+    padding-bottom: 0px;
   }
       
   .btnBox{
