--- a/src/style/components/_codyMyFilter.scss
+++ b/src/style/components/_codyMyFilter.scss
@@ -1,11 +1,14 @@
 .filterContainer{
   position: relative;
   width: 100%;
-  margin: auto;
+  margin: 0 auto;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 10px;
   background-color: $mainLight2;
+  #location{
+    min-width: 100px;
+  }
   .showFilter{
     display: flex;
     justify-content: space-between;
@@ -76,4 +79,3 @@
     opacity: 0;
   }
 }
-
