--- a/src/style/pages/_like.scss
+++ b/src/style/pages/_like.scss
@@ -1,8 +1,6 @@
 .like{
   width: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  height: 100%;
   margin: auto;
   max-width: $maxWidth;
   @media (max-width: $mediaWidth) {
@@ -14,23 +12,34 @@
     margin-top: 60px;
   }
   .likeContainer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     .imgBox{
       position: relative;
-      width: 30%;
+      width: 90%;
       height: auto;
       margin: 5px;
-      padding-bottom: 35%;
+      padding-bottom: 100%;
       overflow: hidden;
       box-shadow: 0px 0px 6px 0px $shadow;
-      .codyImg{
-        position:absolute;
+      .codyImg {
+        position: absolute;
         width: 100%;
         height: 100%;
+        transform: translate(-50%,0);
         object-fit: cover;
-        transform: translate(-50%);
+      }
+      .heart{
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        font-size: $fontMedium;
+        color: gray;
+        z-index: 1;
+        cursor: pointer;
+      }
+      .heartActive{
+        color: $red;
       }
     }
   }
